syntax = "proto3";

option go_package = "./";

package gopaxos;

// the service replicas provide to clients
service ClientReplica {
    rpc Request (Message) returns (Message) {}
    rpc Collect (Message) returns (Message) {}
}

service ReplicaLeader {
    rpc Propose (Message) returns (Message) {}
    rpc Collect (Message) returns (Message) {}
    rpc Heartbeat (Message) returns (Message) {} // THIS IS NOT FOR REPLICA BUT FOR LEADERS
}

service LeaderAcceptor {
    rpc Scouting (Message) returns (Message) {}
    rpc Commanding (Message) returns (Message) {}
}

message Message {
    int32 type = 1;

    int32 clientId = 2;
    string commandId = 3;
    string operation = 4;
    Command command = 5;
    bool valid = 6;
    repeated Response responses = 7;
    repeated Decision decisions = 8;
    int32 ballotNumber = 9;
    int32 ballotLeader = 10;
    int32 slotNumber = 11;
    int32 leaderId = 12;
    int32 acceptorId = 13;
    BSC bsc = 14;
    repeated BSC accepted = 15;
    bool active = 16;
    string content = 17;
}

message Command {
    int32 clientId = 1;
    string commandId = 2;
    string operation = 3;
}

// should not send response to client until the command's slot is decided
message Response {
    Command command = 1;
}

message Responses {
    bool valid = 1;
    repeated Response responses = 2;
}

message Proposal {
    int32 slotNumber = 1;
    Command command = 2;
}

// Why we need to send the entire command message?
// because a replica may receive decisions not in its command pool
message Decision {
    int32 slotNumber = 1;
    Command command = 2;
}

message Decisions {
    bool valid = 1;
    repeated Decision decisions = 2;
}

message BSC {
    int32 ballotNumber = 1;
    int32 slotNumber = 2;
    Command command = 3;
}

message P1a {
    int32 leaderId = 1;
    int32 ballotNumber = 2;
}

message P1b {
    int32 acceptorId = 1;
    int32 ballotNumber = 2;
    int32 ballotLeader = 3;
    repeated BSC accepted = 4;
}

message P2a {
    int32 leaderId = 1;
    BSC bsc = 2;
}

message P2b {
    int32 acceptorId = 1;
    int32 ballotNumber = 2;
    int32 ballotLeader = 3;
}

message Beat {
    bool active = 1;
}

message Empty {
    string content = 1;
}